tests/ui/object-safety/assoc_type_bounds_sized.stderr
error[E0191]: the value of the associated type `Bar` (from trait `Foo`) must be specified
  --> $DIR/assoc_type_bounds_sized.rs:7:16
   |
LL |     type Bar
   |     -------- `Bar` defined here
...
LL | fn foo(_: &dyn Foo) {}
   |                ^^^ help: specify the associated type: `Foo<Bar = Type>`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0191`.
